--- a/.gitignore
+++ b/.gitignore
@@ -1,67 +1,95 @@
-# Arquivos do sistema
-.DS_Store
-Thumbs.db
-desktop.ini
+# BikeJJ - .gitignore
 
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Dependências
-node_modules/
+# Python
 __pycache__/
 *.py[cod]
 *$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-# Arquivos temporários
-*.tmp
-*.temp
-.cache/
+# Virtual Environment
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
 
-# IDEs e editores
+# IDE
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
 
-# Arquivos de build
-dist/
+# OS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Arduino
+*.hex
+*.elf
+*.map
+*.bin
+*.partitions.bin
+*.bootloader.bin
+*.merged.bin
+
+# Build files
 build/
-*.min.js
-*.min.css
+esp32_bike_sensor/build/
 
-# Arquivos de ambiente
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-# Arquivos de backup
+# Temporary files
+*.tmp
+*.temp
 *.bak
 *.backup
-*.old
 
-# Arquivos de teste
-coverage/
-.nyc_output/
-.coverage
-.pytest_cache/
+# Configuration files with sensitive data
+config.ini
+secrets.json
+.env
 
-# Arquivos de sistema Python
-*.pyc
-*.pyo
-*.pyd
-.Python
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+# Database
+*.db
+*.sqlite
+*.sqlite3
 
-# Arquivos de configuração local
-config.local.js
-settings.local.json
+# Cache
+.cache/
+*.cache
+
+# Node modules (if using any)
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Backup files
+*.noisette
+bike.xyz_backup.noisette
+bike.xyz_autosave/
